# opengrid-lite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
core/: pyproject.toml
core/src/opengrid/: __init__.py  cli.py  studio.py
python/src/opengrid_lite/: __init__.py  cli.py  studio.py
python/src/shotgrid_lite/: __init__.py  cli.py  models.py  studio.py
server/: pyproject.toml
server/src/opengrid_server/: __init__.py  main.py
web/: index.html  package.json
web/src/: App.tsx  index.css  main.tsx
