[project]
name = "opengrid-lite"
version = "0.1.0"
description = "Lightweight production tracking for VFX/Animation pipelines"
authors = [
    { name = "Alejandro Cabrera", email = "voidreamer@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["vfx", "animation", "pipeline", "shotgrid", "production", "tracking"]

dependencies = []

[project.optional-dependencies]
cli = [
    "typer>=0.9",
    "rich>=13.0",
]
server = [
    "fastapi>=0.109",
    "uvicorn>=0.27",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
all = [
    "opengrid-lite[cli,server,dev]",
]

[project.scripts]
sgl = "opengrid_lite.cli:app"

[project.urls]
Homepage = "https://github.com/voidreamer/opengrid-lite"
Repository = "https://github.com/voidreamer/opengrid-lite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/src/opengrid_lite"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
