[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opengrid-monorepo"
version = "0.1.0"
description = "Production tracking for modern VFX/Animation pipelines"
authors = [{ name = "Alejandro Cabrera", email = "voidreamer@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

# This is a monorepo - install packages individually:
# pip install ./core
# pip install ./server

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["core/tests", "server/tests"]
